// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordButton must match the snapshot with defaultProps 1`] = `
<UnstyledButtonStyle
  aria-hidden={true}
  as="UnstyledButtonStyle"
>
  <svg
    icon="eye"
    lib="@fortawesome/react-fontawesome"
    prefix="fas"
  />
</UnstyledButtonStyle>
`;

exports[`PasswordButton must return the diff between snapshot when password is displayed vs hidden 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`PasswordButton must return the diff between snapshot with a negative vs a postive Tab Index 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,9 +1,9 @@
  <UnstyledButtonStyle
    aria-hidden={true}
    as="UnstyledButtonStyle"
-   tabIndex="-1"
+   tabIndex="0"
  >
    <svg
      icon="eye"
      lib="@fortawesome/react-fontawesome"
      prefix="fas"
`;
